# Steno

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  kanban-items.json  package.json  pnpm-lock.yaml  release-please-config.json  seed-project.sh
.github/: pull_request_template.md
.github/workflows/: lint.yml  release.yml  tests.yml
apps/api/: Pipfile  README.md  package.json  pyproject.toml  requirements.txt
apps/api/src/: __init__.py  main.py  models.py
apps/api/src/audio/: __init__.py  processor.py
apps/api/src/captions/: __init__.py  segmenter.py  stylizer.py
apps/api/src/transcription/: __init__.py  whisper_service.py
apps/renderer/: package.json  tailwind.config.js  tsconfig.json
apps/renderer-api/: package.json
apps/renderer-api/src/: index.ts  render.ts  types.ts
apps/renderer-api/src/compositions/: styles.css
apps/renderer-api/src/compositions/components/: CaptionSequence.tsx
apps/renderer/src/: Composition.tsx  Root.tsx
apps/renderer/src/components/: Caption.tsx  CaptionSequence.tsx  index.ts
apps/renderer/src/components/animations/: FadeIn.tsx  ScaleIn.tsx  Typewriter.tsx  WordByWord.tsx  index.ts
apps/web/: .eslintrc.json  index.html  package.json  tailwind.config.js
apps/web/src/: App.tsx  index.css  vite-env.d.ts
apps/web/src/api/: client.ts
apps/web/src/components/: CaptionDetailsPanel.tsx  CaptionEditor.tsx  CaptionTimeline.tsx  Export.tsx  Preview.tsx  PreviewComposition.tsx  ProcessingStatus.tsx  VideoUpload.tsx  index.ts
apps/web/src/store/: useStenoStore.ts
scripts/: setup-github.sh
(+2 files in other folders)
